--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -4,9 +4,9 @@ version: 1.2.4
 homepage: https://github.com/chavesgu/images_picker
 
 environment:
-  sdk: ">=2.12.0 <3.0.0"
-  flutter: ">=1.12.13+hotfix.5"
-
+  sdk: ">=2.1.0 <3.0.0"
+  flutter: ">=1.2.3"
+  
 dependencies:
   flutter:
     sdk: flutter
